--- a/.github/workflows/daily-blog.yml
+++ b/.github/workflows/daily-blog.yml
@@ -2,8 +2,8 @@ name: Daily AI Package Blog Generation
 
 on:
   schedule:
-    # Run daily at 9:00 AM UTC
-    - cron: '0 9 * * *'
+    # Run daily at 6:00 AM CET (5:00 AM UTC)
+    - cron: '0 5 * * *'
   workflow_dispatch:  # Allow manual trigger
 
 permissions:
