First commit search + images

--- a/.github/workflows/daily-best-of-the-best.yml
+++ b/.github/workflows/daily-best-of-the-best.yml
@@ -27,6 +27,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install -r scripts/requirements.txt
+          # Ensure image generation dependencies
+          python -m pip install Pillow requests python-dotenv
 
       - name: ⚙️ Install Ollama (Linux)
         run: |
@@ -38,7 +40,7 @@ jobs:
           OLLAMA_PORT: "11434"
         run: |
           ollama serve >/tmp/ollama.log 2>&1 &
-          # wait for server to be ready
+          # Wait for server to be ready
           for i in {1..30}; do
             if curl -fsS "http://127.0.0.1:11434/api/tags" >/dev/null 2>&1; then
               echo "✅ Ollama is up"
@@ -49,36 +51,89 @@ jobs:
           done
           echo "⬇️ Pulling llama3:8b..."
           ollama pull llama3:8b
+          echo "✅ Model ready"
+
+      - name: Create required directories
+        run: |
+          mkdir -p blog/api
+          mkdir -p blog/posts
+          mkdir -p data
+          mkdir -p assets/images
+          mkdir -p logs
 
       - name: 🏆 Generate daily Best-of-the-Best blog post
         env:
-          # Tell llm_client to use Ollama llama3
+          # Ollama configuration
           NEWS_LLM_MODEL: "ollama/llama3:8b"
           OLLAMA_HOST: "http://127.0.0.1:11434"
 
-          # Optional: other providers (if you ever switch away from Ollama)
+          # Image generation (optional - will create placeholders if not set)
+          PEXELS_API_KEY: ${{ secrets.PEXELS_API_KEY }}
+
+          # Optional: other LLM providers (if you switch from Ollama)
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
           ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
           WATSONX_APIKEY: ${{ secrets.WATSONX_APIKEY }}
           WATSONX_URL: ${{ secrets.WATSONX_URL }}
           WATSONX_PROJECT_ID: ${{ secrets.WATSONX_PROJECT_ID }}
         run: |
+          echo "🚀 Starting blog generation with v3.6..."
           python scripts/generate_daily_blog.py
+          echo "✅ Blog generation complete"
+
+      - name: Verify blog post was created
+        run: |
+          # Check if any new blog post exists
+          if ls blog/posts/*.md 1> /dev/null 2>&1; then
+            echo "✅ Blog post files found"
+            LATEST_POST=$(ls -t blog/posts/*.md | head -1)
+            echo "📄 Latest post: $LATEST_POST"
+            # Check word count
+            WORD_COUNT=$(wc -w < "$LATEST_POST")
+            echo "📊 Word count: $WORD_COUNT"
+            if [ "$WORD_COUNT" -lt 800 ]; then
+              echo "⚠️ Warning: Post seems short (< 800 words)"
+            fi
+          else
+            echo "❌ No blog posts found!"
+            exit 1
+          fi
+          
+          # Check if assets were created
+          if ls assets/images/20*/header-*.jpg 1> /dev/null 2>&1; then
+            echo "✅ Topic-specific images created"
+            ls -lh assets/images/20*/
+          else
+            echo "⚠️ No images found (placeholders should exist)"
+          fi
 
       - name: 🔁 Rebuild blog index & API feeds
         run: |
           python blog/generate_index.py
           python export_data_feeds.py
 
-      - name: Commit new blog + updated feeds
+      - name: Commit new blog + assets + updated feeds
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
-          commit_message: "🏆 Daily Best-of-the-Best blog update"
+          commit_message: "🏆 Daily Best-of-the-Best blog with topic-specific images"
           file_pattern: |
             blog/posts/*.md
             blog/posts/index.json
             blog/api/*.json
             blog/api/*.xml
             data/blog_coverage.json
+            assets/images/**/*.jpg
+            assets/images/**/*.png
           commit_user_name: "BestOfTheBestBot"
           commit_user_email: "actions@github.com"
+          commit_options: '--no-verify'
+
+      - name: 📊 Upload logs (on failure)
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: blog-generation-logs
+          path: |
+            logs/blog_generation.log
+            /tmp/ollama.log
+          retention-days: 7
