--- a/scripts/requirements.txt
+++ b/scripts/requirements.txt
@@ -20,3 +20,47 @@ beautifulsoup4
 # Data processing (if needed by existing scripts)
 pypistats
 matplotlib
+
+# ============================================================================
+# NEW: Image Tools & Asset Management (v3.0)
+# ============================================================================
+
+# Image processing and creation
+Pillow>=10.0.0              # For placeholder images and image manipulation
+
+# Screenshot and browser automation
+playwright>=1.40.0          # For website screenshots (optional but recommended)
+
+# Architecture diagrams
+diagrams>=0.23.0            # For cloud architecture diagrams (requires graphviz)
+
+# ============================================================================
+# NEW: Data Science Libraries for Code Examples (v3.0)
+# ============================================================================
+# These ensure generated code examples have real datasets available
+
+pandas>=2.0.0               # Data manipulation for code examples
+numpy>=1.24.0               # Numerical computing for code examples
+scikit-learn>=1.3.0         # ML datasets (iris, breast_cancer, etc.)
+
+
+# ============================================================================
+# INSTALLATION NOTES
+# ============================================================================
+#
+# After pip install, also run:
+#
+# 1. Install Playwright browsers (for screenshots):
+#    playwright install chromium
+#
+# 2. Install system dependencies (Linux/Ubuntu):
+#    sudo apt-get install graphviz fonts-dejavu-core
+#
+# 3. Install system dependencies (macOS):
+#    brew install graphviz
+#
+# 4. Get Pexels API key (optional, for stock photos):
+#    - Visit: https://www.pexels.com/api/
+#    - Add to .env: PEXELS_API_KEY=your_key_here
+#
+# ============================================================================
