--- a/scripts/requirements.txt
+++ b/scripts/requirements.txt
@@ -43,7 +43,7 @@ pandas>=2.0.0               # Data manipulation for code examples
 numpy>=1.24.0               # Numerical computing for code examples
 scikit-learn>=1.3.0         # ML datasets (iris, breast_cancer, etc.)
 
-
+ddgs
 # ============================================================================
 # INSTALLATION NOTES
 # ============================================================================
