--- a/scripts/requirements.txt
+++ b/scripts/requirements.txt
@@ -44,6 +44,7 @@ numpy>=1.24.0               # Numerical computing for code examples
 scikit-learn>=1.3.0         # ML datasets (iris, breast_cancer, etc.)
 
 ddgs
+markdown-it-py
 # ============================================================================
 # INSTALLATION NOTES
 # ============================================================================
