--- a/.env.template
+++ b/.env.template
@@ -1,256 +1,162 @@
 # ============================================================================
-# Best-of-the-Best Blog Generator - Environment Configuration
+# Best-of-the-Best Blog Generator - Environment Configuration (.env.template)
 # ============================================================================
 #
 # INSTRUCTIONS:
-# 1. Copy this file to .env:
-#    cp .env.template .env
+# 1) Copy this file to .env:
+#      cp .env.template .env
 #
-# 2. Fill in your API keys and configuration below
+# 2) Pick your LLM by setting NEWS_LLM_MODEL with a provider prefix:
+#      - ollama/<model>
+#      - openai/<model>
+#      - anthropic/<model>
+#      - watsonx/<model>
 #
-# 3. Keep .env secure and NEVER commit it to git
+# 3) Keep .env secure and NEVER commit it to git
 #    (it's already in .gitignore)
+#
+# DEFAULT:
+# - This template defaults to Ollama (local).
 #
 # ============================================================================
 
-# ----------------------------------------------------------------------------
-# OLLAMA CONFIGURATION (Required)
-# ----------------------------------------------------------------------------
-# Ollama is the primary LLM provider for blog generation
 
-# Ollama server URL
+# ----------------------------------------------------------------------------
+# LLM SELECTION (Required)
+# ----------------------------------------------------------------------------
+# Examples:
+#   NEWS_LLM_MODEL=ollama/llama3:8b
+#   NEWS_LLM_MODEL=openai/gpt-4o-mini
+#   NEWS_LLM_MODEL=anthropic/claude-3-5-sonnet-latest
+#   NEWS_LLM_MODEL=watsonx/meta-llama/llama-3-3-70b-instruct
+NEWS_LLM_MODEL=ollama/llama3:8b
+
+# Optional tuning (used by scripts/llm_client.py)
+NEWS_LLM_TEMPERATURE=0.7
+
+
+# ----------------------------------------------------------------------------
+# OLLAMA CONFIGURATION (Required if using ollama/*)
+# ----------------------------------------------------------------------------
 # Default: http://127.0.0.1:11434
 OLLAMA_HOST=http://127.0.0.1:11434
 
-# Ollama model to use
-# Options: ollama/llama3:8b, ollama/mistral, ollama/codellama, ollama/mixtral
-# Default: ollama/llama3:8b
-NEWS_LLM_MODEL=ollama/llama3:8b
+# Optional alias (some setups use this name instead)
+#OLLAMA_API_BASE=http://127.0.0.1:11434
+
 
 # ----------------------------------------------------------------------------
-# WEB SEARCH CONFIGURATION (Optional - Enhanced Research)
+# OPENAI CONFIGURATION (Required if using openai/*)
 # ----------------------------------------------------------------------------
-# Enable real-time web search for the researcher agent
-# NOTE: Search works WITHOUT any API keys using DuckDuckGo (free, unlimited)
-# API keys below are OPTIONAL and only needed for enhanced search capabilities
-
-# SerpAPI - Google Search API (Optional)
-# Get your key at: https://serpapi.com/
-# Free tier: 100 searches/month
-# Enhanced tier: More accurate Google results, better ranking
-SERPAPI_KEY=
-
-# Brave Search API (Optional)
-# Get your key at: https://brave.com/search/api/
-# Free tier: 2,000 queries/month  
-# Enhanced tier: Fast, privacy-focused search results
-BRAVE_API_KEY=
-
-# Search Tool Behavior (Optional - Advanced Configuration)
-# These settings control how the search tool operates
-
-# Cache duration in hours (how long to keep search results cached)
-# Default: 24 hours
-# Increase to reduce API calls, decrease for fresher results
-SEARCH_CACHE_HOURS=24
-
-# Maximum results per search query
-# Default: 5 results
-# Range: 1-10 (higher = more comprehensive but slower)
-SEARCH_MAX_RESULTS=5
-
-# Request timeout in seconds
-# Default: 10 seconds
-# Increase if searches timeout frequently
-SEARCH_TIMEOUT=10
-
-# Rate limit: searches per minute
-# Default: 10 searches/minute
-# Decrease if hitting API rate limits
-SEARCH_RATE_LIMIT=10
-
-# Enable/disable search caching
-# Default: true
-# Set to false to always fetch fresh results (not recommended)
-SEARCH_ENABLE_CACHE=true
-
-# ----------------------------------------------------------------------------
-# IMAGE GENERATION (Optional)
-# ----------------------------------------------------------------------------
-# Pexels API for stock photos
-# Get your free key at: https://www.pexels.com/api/
-# If not provided, system will generate placeholder images
-
-PEXELS_API_KEY=
-
-# ----------------------------------------------------------------------------
-# ALTERNATIVE LLM PROVIDERS (Optional)
-# ----------------------------------------------------------------------------
-# You can use these instead of Ollama if you prefer
-# Uncomment and configure if needed
-
-# OpenAI API
-# Get key at: https://platform.openai.com/api-keys
 #OPENAI_API_KEY=sk-...
 
-# Anthropic Claude API
-# Get key at: https://console.anthropic.com/
+
+# ----------------------------------------------------------------------------
+# ANTHROPIC CONFIGURATION (Required if using anthropic/*)
+# ----------------------------------------------------------------------------
 #ANTHROPIC_API_KEY=sk-ant-...
 
-# IBM watsonx.ai
+
+# ----------------------------------------------------------------------------
+# IBM watsonx.ai CONFIGURATION (Required if using watsonx/*)
+# ----------------------------------------------------------------------------
 # Get credentials at: https://cloud.ibm.com/
 #WATSONX_APIKEY=
 #WATSONX_URL=https://us-south.ml.cloud.ibm.com
 #WATSONX_PROJECT_ID=
+# ----------------------------------------------------------------------------
+# WEB SEARCH CONFIGURATION (Optional - Enhanced Research)
+# ----------------------------------------------------------------------------
+# NOTE: Many implementations can run search WITHOUT keys using DuckDuckGo.
+SERPAPI_KEY=
+BRAVE_API_KEY=
+
+SEARCH_CACHE_HOURS=24
+SEARCH_MAX_RESULTS=5
+SEARCH_TIMEOUT=10
+SEARCH_RATE_LIMIT=10
+SEARCH_ENABLE_CACHE=true
+
+
+# ----------------------------------------------------------------------------
+# IMAGE GENERATION (Optional)
+# ----------------------------------------------------------------------------
+PEXELS_API_KEY=
+
 
 # ----------------------------------------------------------------------------
 # PYTHON CONFIGURATION (Optional)
 # ----------------------------------------------------------------------------
-# Python executable to use
-# Default: python3
-
 PYTHON=python3
+
+
+# ----------------------------------------------------------------------------
+# BLOG CONFIGURATION (Optional)
+# ----------------------------------------------------------------------------
+#MIN_ARTICLE_WORDS=1000
+#MAX_ARTICLE_WORDS=2000
+#DEFAULT_TAGS=ai,machine-learning,data-science
+#ENABLE_CITATIONS=true
+
+
+# ----------------------------------------------------------------------------
+# LOGGING (Optional)
+# ----------------------------------------------------------------------------
+#LOG_LEVEL=INFO
+#LOG_SEARCH_QUERIES=true
+
+
+# ----------------------------------------------------------------------------
+# WEB SEARCH CONFIGURATION (Optional - Enhanced Research)
+# ----------------------------------------------------------------------------
+# NOTE: Many implementations can run web search WITHOUT keys using DuckDuckGo.
+# Keys below are OPTIONAL enhancements for other search providers.
+
+# SerpAPI - Google Search API (Optional)
+#SERPAPI_KEY=
+
+# Brave Search API (Optional)
+#BRAVE_API_KEY=
+
+# Search Tool Behavior (Optional - Advanced Configuration)
+SEARCH_CACHE_HOURS=24
+SEARCH_MAX_RESULTS=5
+SEARCH_TIMEOUT=10
+SEARCH_RATE_LIMIT=10
+SEARCH_ENABLE_CACHE=true
+
+
+# ----------------------------------------------------------------------------
+# IMAGE GENERATION (Optional)
+# ----------------------------------------------------------------------------
+# Pexels API for stock photos (optional)
+#PEXELS_API_KEY=
+
+
+# ----------------------------------------------------------------------------
+# PYTHON CONFIGURATION (Optional)
+# ----------------------------------------------------------------------------
+PYTHON=python3
+
 
 # ----------------------------------------------------------------------------
 # BLOG CONFIGURATION (Optional - Advanced)
 # ----------------------------------------------------------------------------
-# Customize blog generation behavior
-
-# Minimum words per article
-# Default: 1000
 #MIN_ARTICLE_WORDS=1000
-
-# Maximum words per article
-# Default: 2000
 #MAX_ARTICLE_WORDS=2000
-
-# Default tags if none provided
-# Default: ai,machine-learning
 #DEFAULT_TAGS=ai,machine-learning,data-science
-
-# Enable/disable source citations in blog posts
-# Default: true (recommended with web search enabled)
 #ENABLE_CITATIONS=true
+
 
 # ----------------------------------------------------------------------------
 # LOGGING (Optional - Advanced)
 # ----------------------------------------------------------------------------
-# Log level: DEBUG, INFO, WARNING, ERROR
-# Default: INFO
 #LOG_LEVEL=INFO
-
-# Enable search logging
-# Default: true
 #LOG_SEARCH_QUERIES=true
 
-# ----------------------------------------------------------------------------
-# GITHUB ACTIONS / CI/CD (For automated workflows)
-# ----------------------------------------------------------------------------
-# These are typically set as GitHub Secrets, not in .env
-# Listed here for reference only
 
-# GitHub token (automatically provided by GitHub Actions)
-#GITHUB_TOKEN=ghp_...
-
-# Force blog regeneration even if posted today
+# ----------------------------------------------------------------------------
+# CI/CD / GitHub Actions (Reference Only)
+# ----------------------------------------------------------------------------
+#GITHUB_TOKEN=
 #FORCE_REGENERATE=false
-
-# ----------------------------------------------------------------------------
-# NOTES
-# ----------------------------------------------------------------------------
-#
-# REQUIRED:
-# - OLLAMA_HOST and NEWS_LLM_MODEL (or alternative LLM provider)
-# - blog/api/*.json files with your content
-#
-# OPTIONAL BUT RECOMMENDED:
-# - PEXELS_API_KEY for real stock photos
-# - SERPAPI_KEY or BRAVE_API_KEY for enhanced search (optional)
-#
-# WEB SEARCH NOTES:
-# - Search works WITHOUT any API keys using DuckDuckGo (free, unlimited)
-# - SerpAPI and Brave API keys are OPTIONAL enhancements
-# - With no API keys: DuckDuckGo provides good results for free
-# - With SerpAPI: Get Google search results (more accurate)
-# - With Brave: Get fast, privacy-focused results
-# - All providers have automatic fallback (if one fails, tries next)
-# - Results are cached for 24 hours to reduce API calls
-#
-# SEARCH PROVIDER PRIORITY:
-# 1. DuckDuckGo (always available, no key needed)
-# 2. SerpAPI (if SERPAPI_KEY is set)
-# 3. Brave (if BRAVE_API_KEY is set)
-#
-# SECURITY:
-# - Never share your .env file
-# - Never commit .env to version control
-# - Rotate API keys regularly
-# - Use environment-specific .env files for production
-# - Store GitHub secrets separately in repository settings
-#
-# TROUBLESHOOTING:
-# - If blog generation fails, check:
-#   1. Ollama is running: ollama list
-#   2. Model is downloaded: ollama pull llama3:8b
-#   3. .env file is in project root
-#   4. API keys are valid (if using external providers)
-#
-# - If web search fails:
-#   1. Check internet connectivity: curl -I https://duckduckgo.com
-#   2. Test search directly: python scripts/search.py "test query"
-#   3. Run integration tests: python scripts/test_search_integration.py
-#   4. Check cache directory: ls data/search_cache/
-#   5. Review logs: logs/blog_generation.log
-#
-# - If hitting rate limits:
-#   1. Decrease SEARCH_RATE_LIMIT
-#   2. Increase SEARCH_CACHE_HOURS
-#   3. Add multiple API keys (SerpAPI + Brave) for distribution
-#
-# PERFORMANCE TUNING:
-# - For faster generation: Set SEARCH_MAX_RESULTS=3
-# - For better accuracy: Set SEARCH_MAX_RESULTS=7
-# - For API cost savings: Set SEARCH_CACHE_HOURS=48
-# - For fresh results: Set SEARCH_CACHE_HOURS=12
-#
-# DEVELOPMENT vs PRODUCTION:
-# Development (.env.local):
-#   - Use free tiers (DuckDuckGo, no API keys)
-#   - Enable verbose logging (LOG_LEVEL=DEBUG)
-#   - Shorter cache (SEARCH_CACHE_HOURS=12)
-#
-# Production (.env.production):
-#   - Add SerpAPI/Brave for better results
-#   - Standard logging (LOG_LEVEL=INFO)
-#   - Longer cache (SEARCH_CACHE_HOURS=24)
-#   - Set in GitHub Secrets, not committed to repo
-#
-# ============================================================================
-
-# ----------------------------------------------------------------------------
-# EXAMPLE CONFIGURATIONS
-# ----------------------------------------------------------------------------
-
-# MINIMAL SETUP (No API keys, works out of the box):
-# OLLAMA_HOST=http://127.0.0.1:11434
-# NEWS_LLM_MODEL=ollama/llama3:8b
-# (Everything else uses defaults, DuckDuckGo for search)
-
-# RECOMMENDED SETUP (With enhanced search):
-# OLLAMA_HOST=http://127.0.0.1:11434
-# NEWS_LLM_MODEL=ollama/llama3:8b
-# PEXELS_API_KEY=your_pexels_key
-# SERPAPI_KEY=your_serpapi_key
-# (Gets you images + enhanced Google search results)
-
-# PRODUCTION SETUP (Full features):
-# OLLAMA_HOST=http://127.0.0.1:11434
-# NEWS_LLM_MODEL=ollama/llama3:8b
-# PEXELS_API_KEY=your_pexels_key
-# SERPAPI_KEY=your_serpapi_key
-# BRAVE_API_KEY=your_brave_key
-# SEARCH_CACHE_HOURS=24
-# SEARCH_MAX_RESULTS=5
-# (Gets you everything: images, multiple search providers, optimized caching)
-
-# ============================================================================
